--- a/Bundles/ImportProcessGoogleSheetsGui/data/translation/Zed/en_US.csv
+++ b/Bundles/ImportProcessGoogleSheetsGui/data/translation/Zed/en_US.csv
@@ -1,9 +1,12 @@
+import_process.google_sheets.import_sheet_form_validation.not_blank,"Please select at least one import type"
+
 import_process.google_sheets.select_importer_page_headline,"Step 1: Product Spreadsheet"
 import_process.google_sheets.select_importer_box_headline,"Spreadsheet Selection"
 import_process.google_sheets.select_importer_description_headline,"Product Data Spreadsheet"
 import_process.google_sheets.select_importer_description_text,"Add the URL of the Google spreadsheet containing the new product data into the input field. The import mechanism will only take the data in the document into account."
+import_process.google_sheets.spreadsheet_access_denied_error_message,"Access denied to the provided spreadsheet. Please grant access by link to the provided spreadsheet."
 
-import_process.google_sheets.import_types_page_headline,"Step 2: Product Importer"
-import_process.google_sheets.import_types_box_headline,"Select Product Import Types"
-import_process.google_sheets.import_types_description_headline,"Product Import Types"
+import_process.google_sheets.import_types_page_headline,"Step 2: Product Import"
+import_process.google_sheets.import_types_box_headline,"Select Product Importer Types"
+import_process.google_sheets.import_types_description_headline,"Product Importer Types"
 import_process.google_sheets.import_types_description_text,"Select the importer types you want to execute. Each importer type refers to another tab in the spreadsheet. The following types are available: %import_types%."
